--- a/report/03_data.qmd
+++ b/report/03_data.qmd
@@ -8,7 +8,7 @@ Removals:
 
 - Post-2016 landings and discards were added for all three states for the commercial and recreational fleets. 
 - A new Oregon historical recreational catch reconstruction was incorporated, which covered 1979 - 2000. 
-- A new Washington historical recreational catch reconstruction was provided by \gls{wdfw} and included changes to data from 1990-2016.
+- A new Washington historical recreational catch reconstruction was provided by \gls{wdfw} and included changes to data from 1990 - 2016.
 
 Composition Data: 
 
@@ -26,7 +26,7 @@ Indices of Abundance:
 
 Biological Data: 
 
-- Length-weight relationship parameters were updated to include all the recent (2017 - 2024) fishery-independent data.
+- Length-weight relationship parameters were updated to include all the recent (2017 - 2024) \gls{indexwc} data.
 - Ageing error matrices were unchanged but some Oregon recreation ages were assigned the wrong ageing error in the 2017 assessment and were corrected based on ODFW recommendations. 
 
 ## Fishery-Dependent Data 
@@ -39,17 +39,17 @@ Updated fishery-dependent data, including removals, length and age compositions,
 
 A summary of total removals are provided in @tbl-all_removals and @fig-catch.
 
-Recent commercial landings (2017-2024) were obtained from [\gls{pacfin}](www.pacfin.psmfc.org) for California, Oregon and Washington. For the period from 2016 through 2023, updated \gls{wcgop} discard estimates were added to \gls{pacfin} landings by adding the annual dead discard mortality rate for the commercial sector in the \gls{gemm} recorded discards to obtain the total catch of Yelloweye Rockfish within commercial fleets. At this time no \gls{wcgop} data were available for 2024, so we used the average total discard for 2021-2023 to approximate total 2024 discards for each commercial fleet.  
+Recent commercial landings (2017 - 2024) were obtained from [\gls{pacfin}](www.pacfin.psmfc.org) for California, Oregon and Washington. For the period from 2016 through 2023, updated \gls{wcgop} discard estimates were added to \gls{pacfin} landings by adding the annual dead discard mortality rate for the commercial sector in the \gls{gemm} recorded discards to obtain the total catch of Yelloweye Rockfish within commercial fleets. At this time no \gls{wcgop} data were available for 2024, so we used the average total discard for 2021 - 2023 to approximate total 2024 discards for each commercial fleet.  
 
 Bycatch for the At-Sea Pacific Hake fleet (A-SHOP) was updated from 2017 through 2024.
 
-Recreational removals from [\gls{recfin}](www.recfin.org) were updated for California, Oregon and Washington from 2017 - 2024. \gls{recfin} removals include an estimate of discard mortality and represent total estimated removals. The (\gls{odfw}) provided updated historical recreational removals for Oregon from 1979 through 2000 [@Whitman_2024]. The Washington Department of Fish and Wildlife (\gls{wdfw}) provided updated historical recreational removals (1967-1989) and \gls{osp} estimates (1990-2001). The historical recreational removals for 1971, 1974, and 1979 were not available and were filled in as the average of the two preceding and two following years. Historical data were filtered to marine catch areas 1-4. For \gls{osp} catch estimates, data included marine catch areas 1-4, up to the Bonilla-Tatoosh line. \gls{wdfw} also provided updated catch estimates for 2002-2004, which did not include discard mortality. To adjust for this, we multiplied the average discard mortality rate from the following five years (2005-2009) by the total discards to calculate total mortality for those years.  
+Recreational removals from [\gls{recfin}](www.recfin.org) were updated for California, Oregon and Washington from 2017 - 2024. \gls{recfin} removals include an estimate of discard mortality and represent total estimated removals. The \gls{odfw} provided updated historical recreational removals for Oregon from 1979 through 2000 [@Whitman_2024]. The Washington Department of Fish and Wildlife (\gls{wdfw}) provided updated historical recreational removals (1967 - 1989) and \gls{osp} estimates (1990 - 2001). The historical recreational removals for 1971, 1974, and 1979 were not available and were filled in as the average of the two preceding and two following years. Historical data were filtered to marine catch areas 1-4. For \gls{osp} catch estimates, data included marine catch areas 1-4, up to the Bonilla-Tatoosh line. \gls{wdfw} also provided updated catch estimates for 2002 - 2004, which did not include discard mortality. To adjust for this, we multiplied the average discard mortality rate from the following five years (2005 - 2009) by the total discards to calculate total mortality for those years.  
 
 ### Fishery-Dependent Length and Age Compositions {#sec-fd_comps}
 
 Updated length composition data for commercial catches (trawl and non-trawl) were available from \gls{pacfin} (extracted April 4, 2025) and from \gls{wcgop} for all three states. These include the years 2017 - 2024 for \gls{pacfin} data and 2017 - 2023 for \gls{wcgop} data. Updated recreational length composition data were available from \gls{recfin} (extracted April 4, 2025) for all three states, and include years 2017 - 2024. Additionally, updated length compositions from the California On-Board CPFV Observer Sampling Program and from the Ocean Recreational Fishery Survey (ORFS, previously the Oregon onboard recreational observer program), both of which measure fish discarded at sea, were also available up through 2024 on \gls{recfin}. 
 
-New commercial age composition data from \gls{pacfin} and \gls{wcgop} for 2017-2024 was included for Oregon and Washington. No new commercial age data were available from California. New recreational age composition data was available from \gls{recfin} from 2017 - 2024 for Washington only (extracted May 13, 2025). These data were collected in the \gls{osp}. There were also some historical updates to Oregon and Washington recreational age data provided by the state representatives.
+New commercial age composition data from \gls{pacfin} and \gls{wcgop} for 2017 - 2024 was included for Oregon and Washington. No new commercial age data were available from California. New recreational age composition data was available from \gls{recfin} from 2017 - 2024 for Washington only (extracted May 13, 2025). These data were collected in the \gls{osp}. There were also some historical updates to Oregon and Washington recreational age data provided by the state representatives.
 
 In addition to extending the length data time series, we also fixed minor data errors found in the 2017 assessment. For length composition data, years with small samples sizes (N = 1) were excluded. There were no changes in how commercial length sample numbers were calculated. However, for all recent recreational fleet length data, the total number of trips information used to calculate the number of samples was not available. Using data from the 2017 assessment, we built fleet-specific linear regressions to approximate the relationship of samples to the number of fish. Then, we applied that regression to the total number of fish for data between 2017 and 2024 to estimate the number of samples. A future benchmark assessment should investigate how to get the number of sampled trips from \gls{recfin} to calculate the number of samples using the @stewart_bootstrapping_2014 method.
 
@@ -57,8 +57,9 @@ We also found that \gls{caal} data from the 2017 assessment had all sample sizes
 
 #### Fleet Specific Changes in the Compositional Data
 
-- Fleet 2. California Non-Trawl:
-  - For ages, all the \gls{caal} and marginal ages (used to explore fits only, not included in the likelihood) data were recalculated using the most recent age data pulled from \gls{pacfin} and \gls{wcgop}, to account for age doubling in 2017.
+Fleet 2. California Non-Trawl:
+
+- For ages, all the \gls{caal} and marginal ages (used to explore fits only, not included in the likelihood) data were recalculated using the most recent age data pulled from \gls{pacfin} and \gls{wcgop}, to account for age doubling in 2017.
 
 Fleet 3. California Recreational:
 
@@ -66,7 +67,7 @@ Fleet 3. California Recreational:
 - \gls{caal} data for 2009-2016 were doubled, but the raw data we received from \gls{recfin} were correct, without doubled ages, so this time series was replaced with newly pulled data. 
 - We then re-built the marginal age data from the updated \gls{caal} for both time periods because there were errors in previous data entry and sample number calculations.
 
-Fleet 4. Oregon/Washington Trawl & Fleet 5. Oregon/Washington Non-Trawl:
+Fleet 4 & 5. Oregon/Washington Trawl & Non-Trawl:
 
 - Both the OR/WA commercial fleets had all \gls{caal} and marginal age (not included in the likelihood) data recalculated using the most recent age data pulled from \gls{pacfin} and \gls{wcgop}, to account for age doubling in 2017.
 
@@ -74,7 +75,7 @@ Fleet 6. Oregon Recreational:
 
 - \gls{caal} data sample sizes and proportions were doubled so numbers from 1979 - 2017 were divided by two. 
 - We included 2015 unsexed ages. 
-- We also reassigned the aging error for this fleet for the correct years. The ODFW data representative confirmed that all fish from 1979-2002 were aged by \gls{wdfw} (ageing error 1), and fish from 2009-2016 were aged by the NWFSC (ageing error 2). No new ages since 2016 were provided. Marginal data were then recalculated from the updated \gls{caal} so that the ageing error labels and number of samples matched.
+- We also reassigned the aging error for this fleet for the correct years. The ODFW data representative confirmed that all fish from 1979 - 2002 were aged by \gls{wdfw} (ageing error 1), and fish from 2009 - 2016 were aged by the NWFSC (ageing error 2). No new ages since 2016 were provided. Marginal data were then recalculated from the updated \gls{caal} so that the ageing error labels and number of samples matched.
 
 Fleet 7. Washington Recreational:
 
@@ -84,47 +85,47 @@ Fleet 7. Washington Recreational:
 
 Two fishery-dependent indices of abundance were updated with new data and up-to-date methodology. These are detailed below. Otherwise, indices of abundances are unchanged from the previous assessment; please refer to the most recent benchmark assessment [@gertseva_stock_2017] for additional information. 
 
-#### Oregon Onboard Observer CPUE, 2001 – 2024 - 
+#### Oregon Onboard Observer CPUE, 2001 – 2024 
 
-The Oregon Onboard Observer (now Ocean Recreational Fisheries Survey, or ORFS) index was updated from the previous Yelloweye Rockfish assessment, and updated drift-level catch-per-unit-effort data was obtained from ODFW through the end of 2024. The database contains information on catch by species (number of retained and released fish), effort (angler hours), sample depth, and bag limits and other relevant regulations [@monk_documentation_2013].  
+The Oregon Onboard Observer (now Ocean Recreational Fisheries Survey, or ORFS) index was updated from the previous Yelloweye Rockfish assessment, and updated drift-level catch-per-unit-effort data were obtained from ODFW through the end of 2024. The database contains information on catch by species (number of retained and released fish), effort (angler hours), sample depth, and bag limits and other relevant regulations [@monk_documentation_2013].  
 
-The unfiltered data set contained 18,410 drifts. Multiple standardized filters are applied to remove outliers and data unsuitable for an index. These filters are very similar to filters applied in 2017 and include removing drifts without data needed for CPUE information, long drifts (above 95th percentile), drifts in deeper waters (more than 64fm, 99th percentile), drifts that were targeting primarily mid-water species, and drifts outside of the legal fishing depth (with a five fm buffer). Additionally, years with extremely low sample sizes (<50) were excluded. Finally, drifts on charters from Port Orford were removed due to small sample sizes. The final filtered data set included 6,839 trips with a 6.1% encounter rate for Yelloweye Rockfish [@tbl-yelloweye_percent_pos_ORFS]. 
+The unfiltered data set contained 18,410 drifts. Multiple standardized filters are applied to remove outliers and data unsuitable for an index. These filters are very similar to filters applied in 2017 and include removing drifts without data needed for CPUE information, long drifts (above 95th percentile), drifts in deeper waters (more than 64fm, 99th percentile), drifts that were targeting primarily mid-water species, and drifts outside of the legal fishing depth (with a five fathom buffer). Additionally, years with extremely low sample sizes (< 50) were excluded. Finally, drifts on charters from Port Orford were removed due to small sample sizes. The final filtered data set included 6,839 trips with a 6.1% encounter rate for Yelloweye Rockfish (@tbl-yelloweye_percent_pos_ORFS). 
 
-Covariates evaluated included year, month, port, the open depths to fishing (all depths or inside 20/30/40fm), and a five fm-binned depth of drift covariate. This is in contrast to the 2017 index, which was only able to evaluate a year covariate. The covariates listed above are standard to evaluate for this index in other assessments. Negative binomial models were fit using \gls{sdmtmb} version 0.6.0 [@Anderson_2024_SRP]) to the drift-level data (catch with a log offset for adjusted angler hours). A model without the open fishing depths or month was selected as the best fit model by AIC [@tbl-yelloweye_model_selection_ORFS]. Acceptable diagnostics for the model were achieved, as evidenced by passing the sanity function in \gls{sdmtmb} (@fig-orfs_qqplot). The index of abundance is shown in @fig-ORFS_index. A comparison to the ORFS index used in the previous assessment indicates that despite the change in modeling approach and the covariates included, most years overlap between the two indices and similar trends are observed [@fig-ORFS_comp]. The updated index has reduced within-year variance and a lack of extreme swings in the standardized index value (e.g. 2013) relative to the index from 2017.
+Covariates evaluated included year, month, port, the open depths to fishing (all depths or inside 20/30/40fm), and a five fm-binned depth of drift covariate. This is in contrast to the 2017 index, which was only able to evaluate a year covariate. The covariates listed above are standard to evaluate for this index in other assessments. Negative binomial models were fit using \gls{sdmtmb} version 0.6.0 [@Anderson_2024_SRP] to the drift-level data (catch with a log offset for adjusted angler hours). A model without the open fishing depths or month was selected as the best fit model by AIC (@tbl-yelloweye_model_selection_ORFS). Acceptable diagnostics for the model were achieved, as evidenced by passing the sanity function in \gls{sdmtmb} (@fig-orfs_qqplot). A comparison to the ORFS index used in the previous assessment indicates that despite the change in modeling approach and the covariates included, most years overlap between the two indices and similar trends are observed (@fig-ORFS_comp). The updated index has reduced within-year variance and a lack of extreme swings in the standardized index value (e.g. 2013) relative to the index from 2017.
 
 #### Oregon ORBS Dockside (release only) CPUE, 2004-2024
 
 The \gls{orbs} dockside index for Oregon was updated for this assessment. CPUE, expressed in terms of fish per angler-hour, was calculated by multiplying the number of anglers and the total trip time, minus the boat type-specific travel time. The database contains information on released fish by species (number of angler-reported released fish), effort (angler hours), sample location (port where data were collected), date, bag limits and other relevant regulations, boat type (charter or private), and trip type (e.g., bottom associated fish). 
 
-The unfiltered data set contained 504,128 trips from 2001 - 2024. Since the previous Yelloweye assessment, multiple data filters have been standardized, which are very similar to the 2017 assessment, and are applied to \gls{orbs} trip-level data to remove outliers and data unsuitable for an index. For this index, the time period was restricted to years when retention of Yelloweye Rockfish was prohibited, which began on January 1, 2004. There were two differences in the filtering in this updated index. First, the previous index began in 2005, which was determined to be an error in the timing of the implementation of prohibited status for Yelloweye. Given that prohibition was in effect on January 1, the year 2004 is included in this updated index. The second difference in filtering is the elimination of the Stephens-MacCall filter in the updated index. This filter has not been used for several assessment cycles, based on a recommendation from NWFSC staff (pers. comm. A. Whitman, ODFW). The final dataset included 133,039 trips from 2004 – 2024 with an overall encounter rate of 7.4% [@tbl-yelloweye_percent_pos_ORBS].
+The unfiltered data set contained 504,128 trips from 2001 - 2024. Since the previous Yelloweye assessment, multiple data filters have been standardized, which are very similar to the 2017 assessment, and are applied to \gls{orbs} trip-level data to remove outliers and data unsuitable for an index. For this index, the time period was restricted to years when retention of Yelloweye Rockfish was prohibited, which began on January 1, 2004. There were two differences in the filtering in this updated index. First, the previous index began in 2005, which was determined to be an error in the timing of the implementation of prohibited status for Yelloweye. Given that prohibition was in effect on January 1, the year 2004 is included in this updated index. The second difference in filtering is the elimination of the Stephens-MacCall filter in the updated index. This filter has not been used for several assessment cycles, based on a recommendation from NWFSC staff (pers. comm. A. Whitman, ODFW). The final dataset included 133,039 trips from 2004 – 2024 with an overall encounter rate of 7.4% (@tbl-yelloweye_percent_pos_ORBS).
 
-Covariates evaluated included year, month, port, the open depths to fishing (all depths or inside 20/30/40 fm), and boat type. These are the same covariates evaluated in the 2017 \gls{orbs} index, apart from the open depths of the fishery. The final model in 2017 included boat type, port and year. Negative binomial models were fit in \gls{sdmtmb} (Version 0.6.0) to the trip-level data (catch with a log offset for adjusted angler hours). The final model selected includes year, month, port, boat type and open fishery depths, which was the best fit model by AIC in this series [@tbl-yelloweye_model_selection_ORBS]. Acceptable diagnostics for the model were achieved, as evidenced by passing the sanity function in \gls{sdmtmb} (@fig-orbs_qq). The index of abundance in shown in @fig-ORBS_index. ODFW no longer maintains the deltaGLM code that was used to develop the 2017 index and so the index was updated to use the currently accepted modeling approach for \gls{pfmc} groundfish assessments (\gls{sdmtmb}, version 0.6.0; @Anderson_2024_SRP). To bridge this change, the 2017 model index structure was applied to the current data set using \gls{sdmtmb} and compared to the deltaGLM index used in the 2017 assessment and the current recommended updated index in @fig-ORBS_comp. There are some differences observed in 2005 – 2009 between the deltaGLM index and the two \gls{sdmtmb} indices; however, this appears to be largely driven by the updated modeling approach.
+Covariates evaluated included year, month, port, the open depths to fishing (all depths or inside 20/30/40 fm), and boat type. These are the same covariates evaluated in the 2017 \gls{orbs} index, apart from the open depths of the fishery. The final model in 2017 included boat type, port, and year. Negative binomial models were fit in \gls{sdmtmb} (Version 0.6.0) to the trip-level data (catch with a log offset for adjusted angler hours). The final model selected includes year, month, port, boat type and open fishery depths, which was the best fit model by AIC in this series (@tbl-yelloweye_model_selection_ORBS). Acceptable diagnostics for the model were achieved, as evidenced by passing the sanity function in \gls{sdmtmb} (@fig-orbs_qq). The index of abundance for the Oregon recreational fleet, including both \gls{mrfss} (1980 - 1999) and ORBS (2004 - 2024) indices is shown in @fig-ORBS_index. ODFW no longer maintains the deltaGLM code that was used to develop the 2017 index and so the index was updated to use the currently accepted modeling approach for \gls{pfmc} groundfish assessments (\gls{sdmtmb}, version 0.6.0) [@Anderson_2024_SRP]. To bridge this change, the 2017 model index structure was applied to the current data set using \gls{sdmtmb} and compared to the deltaGLM index used in the 2017 assessment and the current recommended updated index in @fig-ORBS_comp. There are some differences observed in 2005 – 2009 between the deltaGLM index and the two \gls{sdmtmb} indices; however, this appears to be largely driven by the updated modeling approach.
 
 ## Fishery-Independent Data
 
-Two sources of fishery-independent data were updated: the West Coast Groundfish Bottom Trawl Survey and the \gls{iphc} Longline survey. 
+Two sources of fishery-independent data were updated: the \gls{indexwc} and the \gls{iphc} Longline survey. 
 
-### West Coast Bottom Trawl Survey (WCGBTS)
+### West Coast Groundfish Bottom Trawl Survey (WCGBTS)
 
 The \gls{indexwc} survey methods are most recently described in detail in @keller2017northwest. Geostatistical models of biomass density were fit to survey data from the \gls{indexwc} using \gls{tmb} [@kristensen_tmb:_2016] via the \gls{sdmtmb} R package [@Anderson_2024_SRP] as configured within the [indexwc](https://github.com/pfmc-assessments/indexwc) R package [@Johnson_indexwc]. These models can account for latent spatial factors with a constant spatial Gaussian random field and spatiotemporal deviations to evolve as a random walk Gaussian random field [@thorson_geostatistical_2015]. Delta-gamma and delta-lognormal distributions were investigated. Results are only shown for the model that led to the best model diagnostics, defined as similar distributions of theoretical normal quantiles and model quantiles (@fig-wcgbts_qq), high precision, lack of extreme predictions, and low \gls{aic}. Estimates of biomass from this best model were predicted using a grid based on available survey locations.
 
 The final model used a delta model with a lognormal distribution for the catch-rate component. A logit-link was used for encounter probability and a log-link for positive catch rates. The response variable was catch (mt) with an offset of area swept (km^2^) to account for differences in effort. Fixed effects were estimated for each year and pass. The index was estimated for the area north of 42 degrees North (Oregon and Washington) to be consistent with the previous assessment. The data were truncated to depths shallower than 325 m prior to modeling given that there were zero positive encounters in depths deeper than 325 m. The prediction grid was also truncated to only include available survey locations in depths between 55-325 m to limit extrapolating beyond the data and edge effects. Spatial variation was included in the encounter probability and the positive catch rate model. Spatial variation was approximated using 200 knots, where more knots led to non-estimable standard errors because the positive encounters are too sparse to support the dense spatiotemporal structure. Anisotropy was not estimated.
 
-The biomass estimates produced for this assessment using \gls{sdmtmb} are comparable to the biomass estimates produced in the previous benchmark assessment (@fig-wcgbtsindexcomparison). The index is relatively flat with a peak in 2014, but variation is high throughout the time series (@fig-wcgbtsindex).
+The biomass estimates produced for this assessment using \gls{sdmtmb} are comparable to the biomass estimates produced in the previous benchmark assessment (@fig-wcgbtsindexcomparison). The index is relatively flat with a peak in 2014, but variation is high throughout the time series.
 
 ### IPHC Setline Survey
 
-The \gls{iphc} has conducted an annual longline survey for Pacific halibut off the coast of Oregon and Washington (\gls{iphc} area “2A”) since 1997 (no surveys were performed in 1998 or 2000). Beginning in 1999, this has been a fixed station design, with roughly 1,800 hooks deployed at each of 84 locations. Before 1999, station locations were not fixed, and, therefore, those years are not used in the index. Rockfish bycatch, mainly yelloweye, was recorded during this survey, although values for 1999 and 2001 are estimates based on subsampling the first 20 hooks of each 100-hook skate. The gear used to conduct this survey, while designed specifically to efficiently sample Pacific halibut, is similar to that used in some earlier line fisheries that targeted adult Yelloweye Rockfish. Some variability in exact sampling location is unavoidable, and leeway is given in the \gls{iphc} methods to center the set on the target coordinates but to allow wind and currents to dictate the actual direction in which the gear is deployed. This can result in different habitats accessed at each fixed location among years. The number of skates used can also differ from year to year; skates hauled (i.e., 100 hooks/skate) are thus used as the unit of effort for all years. This has been the standard effort used in past Yelloweye Rockfish stock assessments. 
+The \gls{iphc} has conducted an annual longline survey for Pacific halibut off the coast of Oregon and Washington (\gls{iphc} area “2A”) since 1997 (no surveys were performed in 1998 or 2000). Beginning in 1999, this has been a fixed station design, with roughly 1,800 hooks deployed at each of 84 locations. Before 1999, station locations were not fixed, and thus, those years are not used in the index. Rockfish bycatch, primarily Yelloweye, were recorded during this survey, although values for 1999 and 2001 are estimates based on sub-sampling the first 20 hooks of each 100-hook skate. The gear used to conduct this survey, while designed to sample Pacific Halibut, is similar to gear previously used in line fisheries targeting adult Yelloweye Rockfish. Some variability in sampling location is unavoidable due to wind and currents affecting gear deployment. This can result in different habitats accessed at each fixed location between years. The number of skates used can also differ from year to year; skates hauled (i.e., 100 hooks/skate) are thus used as the unit of effort for all years. This has been the standard effort used in past Yelloweye Rockfish stock assessments. 
 
-New to this assessment is the consideration of eight additional survey stations (1527 to 1534) conducted in a collaborative effort between \gls{iphc} and \gls{wdfw} from 2007-2009, 2013-2019 and 2021-2023. These stations are arranged around \gls{iphc} station 1082 (one of the more notable stations to encounter Yelloweye Rockfish). Only the summer months are considered here to match the time of year sampled by the \gls{iphc} survey. Survey sets at the \gls{wdfw} stations used three skates with 100 hooks each for most years, except for 2021 - 2023, where a total of four skates were used. Like the \gls{iphc} survey, effort was standardized to 100 hooks/skate. These stations were integrated into the \gls{iphc} stations when calculating the index of abundance. The full survey used in this assessment combined all stations in Oregon and Washington into a single index. Data were first filtered to remove all depths with few or no encounters, and then we excluded stations that rarely encountered Yelloweye Rockfish (averaging less than one encounter a year). This left a total of 11 stations for analysis. Both filtering levels increased the percentage of encounters from an initial 11% to 80%. 
+New to this assessment is the consideration of eight additional survey stations (1527 to 1534) conducted in a collaborative effort between \gls{iphc} and \gls{wdfw} from 2007 - 2009, 2013 - 2019 and 2021 - 2023. These stations are set around \gls{iphc} station 1082 due to high capture probability of Yelloweye. Only summer months are considered to match the time of year sampled by the \gls{iphc} survey. Survey sets at the \gls{wdfw} stations used three skates with 100 hooks each for most years, except for 2021 - 2023, where a total of four skates were used. Like the \gls{iphc} survey, effort was standardized to 100 hooks/skate. These stations were integrated into the \gls{iphc} stations when calculating the index of abundance. The full survey used in this assessment combined all stations in Oregon and Washington into a single index. Data were first filtered to remove all depths with few or no encounters, and then we excluded stations that rarely encountered Yelloweye Rockfish (averaging less than one encounter a year). This left a total of 11 stations for analysis. Both filtering levels increased the percentage of encounters from an initial 11% to 80%. 
 
-A log-normal generalized linear model with a log link in the \gls{sdmtmb} R package [@Anderson_2024_SRP] was used to standardize the CPUE. Model selection using the Akaike Information Criteria for small samples (AICc) was conducted to select which variables were included in the model. The final model included year, station, and depth as explanatory variables. Diagnostic tools to ensure the model fit was satisfactory included checking whether the hessian matrix is positive definite, the presence of extreme eigenvalues, and if the non-linear minimizer suggests convergence. These diagnostics were conducted with the sanity function in the \gls{sdmtmb} package. The updated index is compared to the index used in 2017 in @fig-IPHC_comparison. 
+A log-normal generalized linear model with a log link using \gls{sdmtmb} [@Anderson_2024_SRP] was used to standardize the CPUE. Model selection using AICc was conducted to select which variables were included in the model. The final model included year, station, and depth as explanatory variables. Acceptable diagnostics for the model were achieved, as evidenced by passing th sanity function in \gls{sdmtmb}. We compared the updated 2025 index to the 2017 index and found no change in trends (@fig-IPHC_comparison). 
 
 ### Fishery-Independent Length and Age Compositions
 
-Updated length and age composition data were available for the two updated fishery-independent surveys. Compositional data from 2017 through 2024 were updated for \gls{indexwc} were obtained using functions from the [nwfscSurvey](https://github.com/pfmc-assessments/nwfscSurvey) R package [@nwfscSurvey_package_2025]. The \gls{iphc} survey compositional data were provided by \gls{wdfw}. 
+Updated length and age composition data were available for the two updated fishery-independent surveys. Composition data from 2017 through 2024 were updated for \gls{indexwc} and were obtained using functions from the [nwfscSurvey](https://github.com/pfmc-assessments/nwfscSurvey) R package [@nwfscSurvey_package_2025]. The \gls{iphc} survey compositional data were provided by \gls{wdfw}. 
 
-A summary of sampling efforts (number of hauls and number of individual fish) in all surveys is provided in @tbl-sampling-effort-triennial and @tbl-sampling-effort-nwfsc. Updated year-specific length frequency distributions generated for each survey are shown in @fig-NWFSC_lencomps and @fig-IPHC_lencomps, respectively. Updated year-specific \gls{caal} frequencies for each survey are shown in @fig-NWFSC_agecomps1 and @fig-NWFSC_agecomps2 for the \gls{indexwc} and @fig-IPHC_agecomps1 and @fig-IPHC_agecomps2. 
+A summary of sampling efforts (number of hauls and number of individual fish) in both surveys is provided in @tbl-sampling-effort-triennial and @tbl-sampling-effort-nwfsc. Updated year-specific length frequency distributions generated for each survey are shown in @fig-NWFSC_lencomps and @fig-IPHC_lencomps, respectively. Updated year-specific \gls{caal} frequencies for each survey are shown in @fig-NWFSC_agecomps1 and @fig-NWFSC_agecomps2 for the \gls{indexwc} and @fig-IPHC_agecomps1 and @fig-IPHC_agecomps2 for the \gls{iphc}. 
 
 ## Biological Parameters and Data
 
@@ -148,10 +149,10 @@ $$
 F = aL^b
 $$
 
-Where $F$ is fecundity (number of eggs), $L$ is fish length (cm), and $a$ and $b$ are constant coefficients (@fig-fecundity). For Yelloweye @dick_meta-analysis_2017 estimated $a = 7.21847$\*10^-8^ and $b = 4.043$.
+Where $F$ is fecundity (number of eggs), $L$ is fish length (cm), and $a$ and $b$ are constant coefficients (@fig-fecundity). For Yelloweye Rockfish,  @dick_meta-analysis_2017 estimated $a = 7.21847$\*10^-8^ and $b = 4.043$.
 
 ### Natural Mortality
-The 2025 base model used the 2017 assessment's initial value of natural Mortality ($M$) which was estimated based on @hamel_method_2015.
+The 2025 base model used the 2017 assessment's initial value of natural Mortality ($M = 0.044$y^-1^) which was estimated based on @hamel_method_2015.
 
 ## Environmental and ecosystem data
 
