--- a/report/01_executive_summary.qmd
+++ b/report/01_executive_summary.qmd
@@ -16,7 +16,7 @@ This update assessment reports the status of Yelloweye Rockfish (*Sebastes ruber
 
 ## Catches{-}
 
-Catches for Yelloweye Rockfish have averaged over $20 mt$ in recent years (@fig-es-landings, @tbl-es-catches). Yelloweye Rockfish was declared overfished in $2002$ and remains under a rebuilding plan that substantially limits catch. However, as other rockfish stocks have rebuilt and Yelloweye Rockfish has progressed under its rebuilding plan, catches have slowly increased in recent years, primarily in the Oregon-Washington non-trawl fleet and the recreational fleets. 
+Catches for Yelloweye Rockfish have averaged over 20 mt in recent years (@fig-es-landings, @tbl-es-catches). The Yelloweye Rockfish stock was declared overfished in 2002 and remains under a rebuilding plan that substantially limits catch. However, as other rockfish stocks have rebuilt and Yelloweye Rockfish has progressed under its rebuilding plan, catches have slowly increased in recent years, primarily in the Oregon-Washington non-trawl fleet and the recreational fleets. 
 
 ```{r, fig-es-landings} 
 #| label: fig-es-landings
@@ -32,28 +32,51 @@ knitr::include_graphics("figures/r4ss_plots/plots/catch2_landings_stacked.png")
 
 \clearpage
 
-::: landscape
 ```{r, tbl-es-catches, results = "asis"}
 #| label: tbl-es-catches
+#| eval: true
 #| warning: false
 #| echo: false
-#| eval: !expr eval_tables 
-#| tbl-cap: !expr if(eval_tables) catches_es_cap 
+#| tbl-cap: "Recent catches (mt) by fleet and total catch (mt) summed across fleets." 
 #| tbl-pos: H
+
+cat("\\begin{landscape}\n")
+
+catch_table |>
+  dplyr::filter(Year > 2014) |>
+ gt::gt() |>
+  gt::tab_options(
+    table.font.size = 12) |>
+  gt::cols_align(
+    align = "center"
+  ) |>
+  gt::cols_width(
+    everything() ~ px(50)
+  ) |>
+  gt::as_latex()
+
+#   gt::tab_options(
+#     table.font.size = 12,
+#     latex.use_longtable = TRUE,
+#     table.width = pct(60) # trying to make it fit better
+#   ) |>
+#   gt::as_latex()
+
+cat("\n\\end{landscape}\n")
 
 # changed to csv file until r4ss gets fixed
 
 #cat("\\begin{landscape}\n")
 
-catches_es_table <- read.csv("tables/catches_es_table.csv")
-catches_es_table |> 
-   gt::gt() |>
-   gt::tab_options(
-     table.font.size = 12,
-     latex.use_longtable = TRUE,
-     table.width = pct(80) # trying to make it fit better
-   ) |>
-   gt::as_latex()
+#catches_es_table <- read.csv("tables/catches_es_table.csv")
+#catches_es_table |> 
+#   gt::gt() |>
+#   gt::tab_options(
+#     table.font.size = 12,
+#     latex.use_longtable = TRUE,
+#     table.width = pct(80) # trying to make it fit better
+#   ) |>
+#   gt::as_latex()
 
 #cat("\n\\end{landscape}\n")
 
@@ -75,7 +98,6 @@ catches_es_table |>
 #  gt::as_latex()
 
 ```
-:::
 
 \clearpage
 
@@ -85,14 +107,16 @@ catches_es_table |>
 
 The last assessment for Yelloweye Rockfish occurred in 2017. This update assessment extends the data used in the 2017 assessment through 2024. This assessment uses the stock assessment framework Stock Synthesis (SS3 Version 3.30.23.2) by @methot_stock_2013. Data includes catch, length and age data from seven fishery fleets and multiple indices of abundance in California and Oregon/Washington. Two new historical catch reconstructions from Oregon and Washington were incorporated. Four indices of abundance were updated for this assessment, including two recreational fishery indices in Oregon, the \gls{indexwc}, and the \gls{iphc} longline survey. In addition, sample sizes and assignment of aging error were corrected in the compositional data. No new data streams were considered in this update assessment. 
 
-## Stock biomass and dynamics{-}
+## Stock Spawning Output and Dynamics{-}
 
-The Yelloweye Rockfish assessment uses estimates of fecundity (eggs-at-length) from the @dick_meta-analysis_2017 method, and spawning output is reported in millions of eggs. The unexploited level of spawning stock output is estimated to be `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="SSB_Virgin")], 3)` million eggs (95% confidence interval: 1,048.1-1,331.9 million eggs) (@fig-es-so). At the beginning of 2025, the spawning stock output is estimated to be `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="SSB_2025")], 3)` million eggs (95% confidence interval:
-384–571 million eggs), which represents `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="Bratio_2025")], 3)*100`% of the unfished spawning output level.
+The Yelloweye Rockfish assessment uses estimates of fecundity (eggs-at-length) from the @dick_meta-analysis_2017 method, and spawning output is reported in millions of eggs. The unexploited level of spawning stock output is estimated to be `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="SSB_Virgin")], 3)` million eggs (95% confidence interval: 1,048.1 - 1,331.9 million eggs) (@fig-es-so). At the beginning of 2025, the spawning stock output is estimated to be `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="SSB_2025")], 3)` million eggs (95% confidence interval:
+384 – 571 million eggs), which represents `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="Bratio_2025")], 3)*100`% of the unfished spawning output level.
 
-Estimated relative spawning output was below the minimum stock size threshold in the late 1990s and was lowest in the early 2000s before increasing over the last 20 years. The 2024 estimated relative spawning output follows an increasing trajectory and is slightly above the management target threshold (@fig-es-so, @fig-es-sb). Though Yelloweye Rockfish are considered a single stock due to their population's even genetic and spatial structure throughout their range, this assessment is modeled with two areas (California and Oregon-Washington). Current population status differs by area wich may be valuable information for making management and allocation decisions (@fig-status-area-es).
+Estimated relative spawning output was below the minimum stock size threshold in the late 1990s and was lowest in the early 2000s before increasing over the last 20 years. The 2025 estimated relative spawning output follows an increasing trajectory and is slightly above the management target threshold (@fig-es-so, @fig-es-sb). Though Yelloweye Rockfish are considered a single stock due to their population's even genetic and spatial structure throughout their range, this assessment is modeled with two areas (California and Oregon-Washington). Current population status differs by area which may be valuable information for making management and allocation decisions (@fig-status-area-es).
 
+\clearpage
 <!-- Trends and current levels relative to virgin or historic levels, description of uncertainty-include table for last 10 years and graph with long term estimates. -->
+\pagebreak
 
 ```{r, tbl-es-sb, results = "asis"}
 #| label: tbl-es-sb
@@ -228,9 +252,9 @@ knitr::include_graphics("figures/r4ss_plots/plots/recdevs2_withbars.png")
 
 ```
 
-## Exploitation status{-}
+## Exploitation Status{-}
 
-This assessment estimates that the stock of Yelloweye Rockfish off the continental U.S. Pacific Coast is currently at `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="Bratio_2025")], 3)*100`% of its unexploited level. This is above the overfished threshold of SO25%, and slightly above the management target SO40% of unfished spawning output. Fishing intensity increased throughout the 1900s as the stock was fished down, until stabilizing at peak intensity between the mid1980s and late 1990s and substantially decreasing in the late 1990s and early 2000s. Fishing intensity has since been relatively stable (@fig-es-kobe, @tbl-es-spr). 
+This assessment estimates that the stock of Yelloweye Rockfish off the continental U.S. Pacific Coast is currently at `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="Bratio_2025")], 3)*100`% of its unexploited level. This is above the overfished threshold of SO25%, and slightly above the management target SO40% of unfished spawning output. Fishing intensity increased throughout the 1900s as the stock was fished down, until stabilizing at peak intensity between the mid-1980s and late 1990s and substantially decreasing in the late 1990s and early 2000s. Fishing intensity has since been relatively stable (@fig-es-kobe, @tbl-es-spr). 
 
 <!-- Exploitation rates (i.e., total catch divided by exploitable biomass, or the annual SPR harvest rate) - include a table with the last 10 years of data and a graph showing the trend in fishing mortality relative to the target (y-axis) plotted against the trend in biomass relative to the target (x-axis). -->
 
@@ -239,7 +263,7 @@ This assessment estimates that the stock of Yelloweye Rockfish off the continent
 #| echo: false 
 #| warning: false 
 #| eval: true 
-#| fig-cap: "Phase plot of fishing intensity versus fraction unfished."
+#| fig-cap: "Phase plot of fishing intensity versus fraction unfished. Each point represents the biomass ratio at the start of the year and the relative fishing intensity in that same year. Lines through the final point show 95% intervals based on the asymptotic uncertainty for each dimension. The shaded ellipse is a 95% region which accounts for the estimated correlation between the two quantities." 
 #| fig-alt: "See table @tbl-ts for the values of the fraction unfished and fishing intensity which are related in this figure."
 #| fig-pos: H
 
@@ -275,13 +299,13 @@ spr_es_table |>
   gt::as_latex()
 ```
 
-## Ecosystem considerations{-}
+## Ecosystem Considerations{-}
 
 No ecosystem or environmental data was used in the previous Yelloweye Rockfish assessment and no new data were considered for this update assessment. 
 
-## Reference points{-}
+## Reference Points{-}
 
-A list of estimates of the current state of the population, as well as reference points based on 1) a target unfished spawning output of 40%, 2) a spawning potential ratio of 0.5, and 3) the model estimate of maximum sustainable yield, are all listed in @tbl-ref-points-es-1. Unfished spawning stock output for Yelloweye Rockfish was estimated to be `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="SSB_Virgin")], 3)` million eggs (95% confidence interval: 1,048.1-1,331.9 million eggs). The management target for Yelloweye Rockfish is defined as 40% of the unfished spawning output (SO40%), which is estimated by the model to be 476 million eggs (95% confidence interval: 419-533), which corresponds to an exploitation rate of 0.026. This harvest rate provides an equilibrium yield of 122 mt at SO40% (95% confidence interval: 108-137 mt). The equilibrium yield curve is shown in @fig-eq-yield-es.
+A list of estimates of the current state of the population, as well as reference points based on 1) a target unfished spawning output of 40%, 2) a spawning potential ratio of 0.5, and 3) the model estimate of maximum sustainable yield, are all listed in @tbl-ref-points-es-1. Unfished spawning stock output for Yelloweye Rockfish was estimated to be `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="SSB_Virgin")], 3)` million eggs (95% confidence interval: 1,048.1 - 1,331.9 million eggs). The management target for Yelloweye Rockfish is defined as 40% of the unfished spawning output (SO40%), which is estimated by the model to be 476 million eggs (95% confidence interval: 419 - 533), which corresponds to an exploitation rate of 0.026. This harvest rate provides an equilibrium yield of 122 mt at SO40% (95% confidence interval: 108 - 137 mt).
 
 <!-- Management targets and definitions of overfishing, including the harvest rate that brings the stock to equilibrium at B24% for flatfishes and B40% for all other groundfish stocks (BMSY proxies) and the equilibrium stock size that results from fishing at the default harvest rate (the FMSY proxy). Include a summary table that compares estimated reference points for SSB, SPR, Exploitation Rate and Yield based on SSB proxy for MSY, SPR proxy for MSY, and estimated MSY values. -->
 
@@ -333,25 +357,11 @@ reference_points_table |>
 
 ```
 
-
-```{r}
-#| label: fig-eq-yield-es
-#| echo: false
-#| warning: false
-#| eval: true
-#| out.width: "\\textwidth"
-#| fig-cap: "Equilibrium yield curve (derived from reference point values) for the base model. Values are based on 2024 fishery selectivity and distribution with steepness fixed at 0.718. The relative spawning output is relative to unfished spawning output."
-
-knitr::include_graphics(
-    "figures/r4ss_plots/plots/yield1_yield_curve.png"
-)
-```
-
 \clearpage
 
-## Management performance{-}
+## Management Performance{-}
 
-Recent trends in total catch relative to managment guidelines is available in @tbl-yelloweye_management and shows that total catch of Yelloweye Rockfish has remained below both the \gls{ofl} and \gls{acl} in each year since the previous assessment. Catch in @tbl-yelloweye_management combines the two areas in this model as catch limits for Yelloweye Rockfish are managed as a single coastwide unit and includes both landings and estimated discard mortality.
+Recent trends in total catch relative to management guidelines is available in @tbl-es-management and shows that total catch of Yelloweye Rockfish has remained below both the \gls{ofl} and \gls{acl} in each year since the previous assessment. Catch in @tbl-es-management combines the two areas in this model as catch limits for Yelloweye Rockfish are managed as a single coast wide unit and includes both landings and estimated discard mortality.
 
 <!-- Catches in comparison to OFL, ABC, HG, and OY/ACL values for the most recent 10 years (when available), overfishing levels, actual catch and discard. Include OFL (encountered), OFL (retained) and OFL (dead) if different due to discard and discard mortality. -->
 
@@ -363,23 +373,35 @@ Recent trends in total catch relative to managment guidelines is available in @t
 #| tbl-cap: "Recent trend in the overfishing limits (OFL), the acceptable biological catches (ABCs), the annual catch limits (ACLs), and the total dead catch (landings + discards) all in metric tons (mt)."
 #| tbl-pos: H
 
-# changed to csv file until r4ss gets fixed
+#cat("\\begin{landscape}\n")
 
-yelloweye_management <- read.csv("tables/yelloweye_management.csv")
- yelloweye_management |> 
+recent_management_table |>
    gt::gt() |>
-   gt::cols_label(
-    `Year` = "Year",
-    `OFL..mt.` = "OFL (mt)",
-    `ABC..mt.` = "ABC (mt)",
-    `ACL..mt.` = "ACL (mt)",
-    `Catch..mt.` = "Catch (mt)"
-  ) |>
    gt::tab_options(
      table.font.size = 12,
      latex.use_longtable = TRUE
    ) |>
    gt::as_latex()
+
+#cat("\n\\end{landscape}\n")
+
+# changed to csv file until r4ss gets fixed
+
+#yelloweye_management <- read.csv("tables/yelloweye_management.csv")
+# yelloweye_management |> 
+#   gt::gt() |>
+#   gt::cols_label(
+#    `Year` = "Year",
+#    `OFL..mt.` = "OFL (mt)",
+#    `ABC..mt.` = "ABC (mt)",
+#    `ACL..mt.` = "ACL (mt)",
+#    `Catch..mt.` = "Catch (mt)"
+#  ) |>
+#   gt::tab_options(
+#     table.font.size = 12,
+#     latex.use_longtable = TRUE
+#   ) |>
+#   gt::as_latex()
 
 #recent_management_table |>
 #  dplyr::rename(`Total dead catch (mt)` = `Catch (mt)`) |>
@@ -392,7 +414,7 @@ yelloweye_management <- read.csv("tables/yelloweye_management.csv")
 
 ```
 
-## Harvest projections{-}
+## Harvest Projections{-}
 
 This section will be updated after SSC GFSC review.
 
@@ -408,7 +430,7 @@ This section will be updated after SSC GFSC review.
 #| tbl-cap: !expr if(eval_tables) projections_cap 
 #| tbl-pos: H
 
-#cat("\\begin{landscape}\n")
+cat("\\begin{landscape}\n")
 
 projections_table |>
   gt::gt() |>
@@ -436,13 +458,13 @@ projections_table |>
   ) |>
   gt::as_latex()
 
-#cat("\n\\end{landscape}\n")
+cat("\n\\end{landscape}\n")
 ```
 
 :::
 
 \clearpage
-## Decision table{-}
+## Decision Table{-}
 
 This section will be updated after SSC GFSC review.
 
@@ -450,7 +472,7 @@ This section will be updated after SSC GFSC review.
 #| label: tbl-es-decision-1
 #| warning: false
 #| echo: false
-#| tbl-cap: "Decision table with 10-year projections. 'Mgmt' refers to the three management scenarios (A) the default harvest control rule $P^* = 0.40$. In each case the 2025 and 2026 catches are fixed at the estimates provided by the GMT. The catch for the Washington recreational fleet is input in numbers so the GMT estimate was converted from 3.22 metric tons to 1.53 based on a mean weight of 2.105 kg estimated by SS3 for this fleet in 2024. The alternative states of nature ('Low', 'Base', and 'High' as discussed in the text) are provided in the columns, with Spawning Output ('Spawn', in millions of eggs) and Fraction of unfished spawning output ('Frac') provided for each state."
+#| tbl-cap: "Decision table with 12-year projections. 'Mgmt' refers to the management scenario (A) with the default harvest control rule $P^* = 0.40$. In each case the 2025 and 2026 catches are fixed at the estimates provided by the GMT. The catch for the Washington recreational fleet is input in numbers so the GMT estimate was converted from 3.22 metric tons to 1.53 thousands of fish based on a mean weight of 2.105 kg estimated by SS3 for this fleet in 2024. The alternative states of nature ('Low', 'Base', and 'High' as discussed in the text) are provided in the columns, with Spawning Output ('Spawn', in millions of eggs) and Fraction of unfished spawning output ('Frac') provided for each state."
 #| tbl-pos: H
  table_decision(
    list(mod_low_A, mod_base_A, mod_high_A)
@@ -458,18 +480,19 @@ This section will be updated after SSC GFSC review.
 
 ```
 
-## Scientific uncertainty{-}
+## Scientific Uncertainty{-}
 
-The model estimated uncertainty around the 2025 spawning output with a standard deviation = `r round(mod_out$derived_quants$StdDev[which(mod_out$derived_quants$Label=="Bratio_2025")], 3)`. The uncertainty around the \gls{ofl} in 2025 has a standard deviation = `r round(mod_out$derived_quants$StdDev[which(mod_out$derived_quants$Label=="OFLCatch_2025")], 3)`. Each of these are likely underestimates of overall uncertainty due to the necessity to fix several key population dynamics parameters (e.g. steepness and recruitment variance) and also because there is no explicit incorporation of model structural uncertainty (although see the decision table for alternative states of nature).
+The model estimate of the log-scale standard deviation of the 2025 spawning output is `r mod_out$Pstar_sigma |> round(4)`. The model estimate of the log-scale standard deviation of the 2025 \gls{ofl} is `r mod_out$OFL_sigma |> round(4)`. Each of these are likely underestimates of overall uncertainty due to the necessity to fix several key population dynamics parameters (e.g. steepness and recruitment variance) and also because there is no explicit incorporation of model structural uncertainty (although see the decision table for alternative states of nature).
 
-## Research and data needs{-}
+## Research and Data Needs{-}
 
 Please refer to the 2017 benchmark assessment for a detailed list of research and data needs for Yelloweye Rockfish (@gertseva_stock_2017). In addition to those, the following research and recommendations could improve the ability of future stock assessments to determine the status and productivity of the Yelloweye Rockfish population:
 
 -	Continue refining the ORFS index analysis and ultimately use either the ORBS or ORFS index to describe the CPUE trends in the Oregon recreational fishery after 2000.
 -	Expand the IPHC age composition bins to an older maximum age for the IPHC age composition data to spread out the distribution of length data in the oldest age bins for conditional age-at-length.
+- Explore potential indices of abundance in untrawlable areas.
 
-## Rebuilding projections{-}
+## Rebuilding Projections{-}
 
 This section will be updated after SSC GFSC review.
 
