--- a/report/02_introduction.qmd
+++ b/report/02_introduction.qmd
@@ -1,3 +1,5 @@
+\clearpage
+
 # Introduction
 
 Yelloweye Rockfish (*Sebastes ruberrimus*) are found from the Gulf of Alaska to northern Baja California in Mexico across the northeastern Pacific Ocean [@hart_pacific_1973;@love_rockfishes_2002]. Their core distribution is from southeast Alaska to central California on the west coast of the United States [@love_rockfishes_2002]. Yelloweye Rockfish in Puget Sound are considered isolated from the coastal waters population [@stewart_status_2009] and have been listed as threatened under the Endangered Species Act since 2010 [@drake_status_2010]. 
@@ -12,23 +14,25 @@ There has been little advancement on information pertaining to the stock structu
 
 This section is not required for an update assessment; please refer to the most recent full assessment [@gertseva_stock_2017] for additional information.
 
-## Ecosystem considerations
+## Ecosystem Considerations
 
 This section is not required for an update assessment; please refer to the most recent full assessment [@gertseva_stock_2017] for additional information.
 
-## Fishery description
+## Fishery Description
 
  This section is not required for an update assessment; please refer to the most recent full assessment [@gertseva_stock_2017] for additional information.
 
 ## Management History
 
-Since the 2017 assessment, catch restrictions for Yelloweye Rockfish have continued, though as the stock has begun to recover, the rebuilding plan has allowed for small catch increases that have slightly loosened the constraining impact of this species. However, this section is not required for an update assessment; please refer to the most recent full assessment [@gertseva_stock_2017] and @sec-mgmt for additional information.
+Since the 2017 assessment, catch restrictions for Yelloweye Rockfish have continued, though as the stock recovers, the rebuilding plan has allowed for small catch increases that slightly loosened the constraining impact of this species.
 
-## Management performance{#sec-mgmt}
+This section is not required for an update assessment; please refer to the most recent full assessment [@gertseva_stock_2017] and @sec-mgmt for additional information.
+
+## Management Performance{#sec-mgmt}
 
 Yelloweye Rockfish removals have been substantially reduced since its designation as overfished in 2002 through a variety of management measures that eliminated retention in recreational fisheries, limited commercial retention, created broad spatial closures, and implemented new gear restrictions that reduced trawling in rocky habitats. Many of these restrictions remain in effect, though as Yelloweye Rockfish and other groundfish stocks have begun to rebuild, some management measures have been modified or removed in recent years. These include some additional allocations to recreational fisheries that remain constrained by Yelloweye Rockfish estimated discard mortality, the recent removal of the Yelloweye \gls{rca} for the trawl sector off of California and Oregon, and eliminating some gear restrictions in the RCAs for the non-trawl sector. 
 
-Recent trends in total catch relative to management guidelines is available in [@tbl-yelloweye_management] and shows that total catch of Yelloweye Rockfish has remained below both the \gls{ofl} and \gls{acl} in each year since the previous assessment. Catch in @tbl-yelloweye_management combines the two areas in this model as catch limits for Yelloweye Rockfish are managed as a single coast wide unit and includes both landings and estimated discard mortality. As in the previous assessment, total catches for each fleet in this update include both landings and estimated dead discard mortality. 
+Recent trends in total catch relative to management guidelines are available in @tbl-ye-management and show that total catch of Yelloweye Rockfish has remained below both the \gls{ofl} and \gls{acl} in each year since the previous assessment. Catch in @tbl-ye-management combines the two areas in this model as catch limits for Yelloweye Rockfish are managed as a single coast wide unit and includes both landings and estimated discard mortality. As in the previous assessment, total catches for each fleet in this update include both landings and estimated dead discard mortality. 
 
 <!-- Management performance, including a table or tables comparing Overfishing Limit (OFL), Acceptable Biological Catch (ABC), Annual Catch Limit (ACL), landings, and catch (i.e., landings plus discard) for each area and year. Groundfish assessments that estimate dead discarded catch must include a disclaimer noting that total mortality estimates from the WCGOP and from the stock assessment may differ due to the use of different methods. Investigation into how these methods differ is beyond the scope of a benchmark assessment. The rationale for modeling discard mortality can also be provided. This should be included in all update assessments.  -->
 
