--- a/report/04b_model_results.qmd
+++ b/report/04b_model_results.qmd
@@ -2,26 +2,26 @@
 
 ### Base Model Selection
 
-As a supplement to the model results figures included in this report and described below, a full set of diagnostic plots created by the {r4ss} package [@Taylor_r4ss_lessons_2021] is available [online](https://github.com/rclairer/Sebastes_ruberrimus_2025) along with the Stock Synthesis input files.
+As a supplement to the model results figures included in this report and described below, a full set of diagnostic plots created by the *r4ss* package [@Taylor_r4ss_lessons_2021] is available [online](https://github.com/rclairer/Sebastes_ruberrimus_2025) along with the Stock Synthesis input files.
 
 ### Parameter Estimates
 
-Estimated and fixed parameter values are shown in @tbl-pars. Unfished recruitment was estimated at `r round(mod_out$parameters["SR_LN(R0)", "Value"])` thousands of fish. The von Bertalanffy growth function [@vonB1938] was used to model the relationship between length and age in Yelloweye Rockfish. Conditional age-at-length data is the main source of information to estimate growth. Yelloweye length-at-age `r mod_out$Growth_Parameters$A2` (the second reference age) equals `r round(mod_out$Growth_Parameters$L_a_A2,1)` and an L-infinity of `r round(mod_out$Growth_Parameters$Linf,1)`. @fig-growth shows the estimated growth curve. Spawning output-at-length (cm) is shown in @fig-spoutlen. Spawning output in the assessment is expressed in millions of eggs.
+Estimated and fixed parameter values are shown in @tbl-pars. Unfished recruitment was estimated at `r round(mod_out$parameters["SR_LN(R0)", "Value"],3)` thousands of fish. The von Bertalanffy growth function [@vonB1938] was used to model the relationship between length and age in Yelloweye Rockfish. Conditional age-at-length data is the main source of information to estimate growth. Yelloweye length-at-age `r mod_out$Growth_Parameters$A2` (the second reference age) equals `r round(mod_out$Growth_Parameters$L_a_A2,1)` and an L-infinity of `r round(mod_out$Growth_Parameters$Linf,1)`. @fig-growth shows the estimated growth curve. Spawning output-at-length (cm) is shown in @fig-spoutlen. Spawning output in the assessment is expressed in millions of eggs.
 
 Estimated stock-recruit function for the assessment model is shown in @fig-SRcurve. Estimated recruitment deviations are shown @fig-recdevs_err. Recruitment of Yelloweye Rockfish was estimated to be variable over time, with the most recent years experiencing slightly lower than average recruitment after periods of low and high recruitment during the late 1980s to the early 2000s, and late 2000s to late 2010s, respectively. Reflecting these variable recruitment patterns, the estimated stock-recruit function predicts a relatively wide range of cohort sizes over the observed range of spawning biomass. The model output recruitment variance ($RMSE = 0.48$) is consistent with the fixed input recruitment variance ($R = 0.5$) [@methot_adjusting_2011].
 
 Length-based selectivity curves estimated in the assessment are shown for all fleets together in @fig-selex_allfleets. Estimated selectivity curves for the fishing fleets indicate that the recreational fleets access somewhat smaller fish than the commercial fisheries. All fleets for which curves were allowed to be dome-shaped (commercial trawl and non-trawl fleets) were estimated to be asymptotic. Estimated selectivity curves for the IPHC survey indicate a selection of the largest Yelloweye available, and select the least amount of smaller Yelloweye Rockfish. The WCGBTS selected smaller Yelloweye among all the fishery-independent surveys. 
 
-### Fits to the Data
+### Fits to the Data{#sec-fits}
 
 Model fits to the fishery CPUE and survey indices are presented in @fig-indexfit3 through @fig-indexfit12, and log scale plots were used to see finer changes. Model fits to the indices generally fall within the uncertainty intervals but do not capture the temporal dynamics of each index, most notably in the WCGBTS and in the IPHC survey. 
 
 The model fitted length data aggregated across years reasonably well for all fleets (@fig-agglencomps). Pearson residuals for the fits by fleet and year are shown in @fig-pearsonlenfit1 and @fig-pearsonlenfit2. The length data are very sparse in many years and model fit varies among years and fleets, reflecting the differences in the quantity of the data. For example, lengths for the IPHC survey, the California recreational, and OR/WA non-trawl fleets, which also have the highest input sample sizes, are fit by the model relatively well.
 
-The fits to the mean age by fleet are generally acceptable and are responsive to short-term temporal changes (@fig-mean-age-3 - @fig-mean-age-12), with the exception of the Oregon recreational fleet and the IPHC survey, where the model predicts a higher and a lower mean age, respectively, than the data suggest. This is consistent with the 2017 assessment. Pearson residuals by year and fleet show strong residual patterns but are difficult to interpret given the general lack of age data. See the [GitHub repository](https://github.com/rclairer/Sebastes_ruberrimus_2025) for individual Pearson residual plots.
+The fits to the mean age by fleet are generally acceptable and are responsive to short-term temporal changes (@fig-mean-age-2 - @fig-mean-age-12), with the exception of the Oregon recreational fleet and the IPHC survey, where the model predicts a higher and a lower mean age, respectively, than the data suggest. This is consistent with the 2017 assessment. Pearson residuals by year and fleet show strong residual patterns but are difficult to interpret given the general lack of age data. See the [GitHub repository](https://github.com/rclairer/Sebastes_ruberrimus_2025) for individual Pearson residual plots.
 
 ### Population Trajectory
 
-The estimated time series of spawning output for the entire stock and by area are shown in @fig-spout_combined and @fig-spout_area, respectively. Spawning output relative to unfished spawning output for the entire stock and by area are shown in @fig-status_combined and @fig-status_area. Total biomass, summary biomass and recruitment are shown in @fig-totalbio, @fig-summbio and @fig-tsrecuits, respectively. Trends in total and summary biomass, absolute and relative spawning output track one another very closely. The spawning output of Yelloweye Rockfish started to decline in the 1940s during World War II, but are estimated to have been lightly exploited until the mid-1970s when catches increased and a rapid decline in biomass and spawning output began. The combined relative spawning output reached a minimum of `r round(min(mod_out$derived_quants$Value[which(startsWith(mod_out$derived_quants$Label,prefix = "Bratio"))]),3)*100` of unexploited levels in 2000 (@fig-spout_combined). Yelloweye Rockfish spawning output and relative status is estimated to have been gradually increasing since that time, in response to large reductions in harvest and spatial area closures. The trend from the update model is similar that from the 2017 assessment, however, they estimated a quicker recovery in biomass since 2002 than the 2025 model (@fig-bridge25-comp4). Relative spawning output has differed between the two areas modeled in the assessment, with the California resource estimated to have a lower unfished equilibrium spawning output and estimated to be more depleted in 2025 than the Oregon and Washington resource (@fig-status_area). 
+The estimated time series of spawning output for the entire stock and by area are shown in @fig-spout_combined and @fig-spout_area, respectively. Spawning output relative to unfished spawning output for the entire stock and by area are shown in @fig-status_combined and @fig-status_area. Total biomass, summary biomass and recruitment are shown in @fig-totalbio, @fig-summbio and @fig-tsrecuits, respectively. Trends in total and summary biomass, absolute and relative spawning output track one another very closely. The spawning output of Yelloweye Rockfish started to decline in the 1940s during World War II, but are estimated to have been lightly exploited until the mid-1970s when catches increased and a rapid decline in biomass and spawning output began. The combined relative spawning output reached a minimum of `r round(min(mod_out$derived_quants$Value[which(startsWith(mod_out$derived_quants$Label,prefix = "Bratio"))]),3)*100` of unexploited levels in 2000 (@fig-spout_combined). Yelloweye Rockfish spawning output and relative status is estimated to have been gradually increasing since that time, in response to large reductions in harvest and spatial area closures. The trend from the 2025 update model is very similar that from the 2017 assessment, however, the 2017 assessment estimated a slightly quicker recovery in biomass since 2002 than the 2025 model (@fig-bridge25-comp4). Relative spawning output has differed between the two areas modeled in the assessment, with the California resource estimated to have a lower unfished equilibrium spawning output and estimated to be more depleted in 2025 than the Oregon and Washington resource (@fig-status_area). 
 
 Recruitment has been relatively dynamic over time, with several large peaks and troughs estimated in the age-0 recruits (@fig-tsrecuits). Compared to the 2017 recruitment, our model estimates larger deviations from zero in the low period before 2000 and the high period after 2000, and estimates above average recruitment up until 2015. In 2016, and to 2024, the estimate of recruitment deviations drop below zero, though with the 95% intervals widely overlapping zero. Due to limited age data and protracted age distribution it can be hard to assign recruitment events to specific years, and we end up with autocorrelated patterns based on ages as inferred from lengths. There are some autocorrelated peaks and troughs in recruitment in the 1940s and 50s but those early patterns in recruitment are not very meaningful. The above average recruitment starting in 2020 is also not biologically meaningful because there are no composition data to inform the estimates, and they are pulled by the recruitment deviation prior to zero. The more extreme swings in low to high periods for 1990-2015 and the extended low recruitment starting in 2016 are likely driving the slower recovery rate of Yelloweye Rockfish relative to the 2017 predictions. However, there are no data to inform the most recent years when recruits are not yet selected by the fisheries.
