--- a/report/04c_model_diagnostics.qmd
+++ b/report/04c_model_diagnostics.qmd
@@ -2,7 +2,7 @@
 
 ### Convergence
 
-Model convergence was evaluated by starting the minimization process from dispersed values of the maximum likelihood estimates to determine if the model found a better minimum. Starting parameters were jittered using the jitter function built into Stock Synthesis, using a jitter input of 0.10. This was repeated 50 times with 78% of runs returning to the base model likelihood. A better, lower negative log-likelihood, model fit was not found. The spread of this search indicates that the jitter was sufficient to search a large portion of the likelihood surface, and that the base model is at a global minimum (@fig-full-jitter). Through the jittering and the likelihood profiles, we are confident that the base model, as presented, represents the best fit to the data given the assumptions made. There were no difficulties in inverting the Hessian to obtain estimates of variability. The final gradient was 0.00215. The maximum gradient component was slightly higher than the convergence criterion, but the "hess_step" option was used successfully to confirm that the gradient could be improved without changing the model results, providing strong evidence of convergence to a mode with quadratic log-likelihood surface.
+Model convergence was evaluated by starting the minimization process from dispersed values of the maximum likelihood estimates to determine if the model found a better minimum. Starting parameters were jittered using the jitter function built into Stock Synthesis, using a jitter input of 0.10. This was repeated 100 times with 82% of runs returning to the base model likelihood. A better, lower negative log-likelihood, model fit was not found. The spread of this search indicates that the jitter was sufficient to search a large portion of the likelihood surface, and that the base model is at a global minimum (@fig-full-jitter). Through the jittering and the likelihood profiles, we are confident that the base model, as presented, represents the best fit to the data given the assumptions made. There were no difficulties in inverting the Hessian to obtain estimates of variability. The final gradient was 0.00215. The maximum gradient component was slightly higher than the convergence criterion, but the "hess_step" option was used successfully to confirm that the gradient could be improved without changing the model results, providing strong evidence of convergence to a mode with quadratic log-likelihood surface.
 
 ### Sensitivity Analyses
 
@@ -16,14 +16,13 @@ Model results are sensitive to whether natural mortality and steepness are estim
 
 #### Sensitivity to dataset choice and weighting schemes
 
-Sensitivity analyses to dataset choices to examine the impact of including different data streams were conducted by selectively removing each data source using emphasis factors, as well as by including different weighting schemes for composition data. Summaries of model results for these sensitivities are presented in @tbl-sensitivities-like-indices, @tbl-sensitivities-like-comps-len1, @tbl-sensitivities-like-comps-len1 and @tbl-sensitivities-like-comps-age. Among these, the base model appears to be most sensitive to removing all length compositions, which show a significantly different biomass trajectory and a more optimistic estimate of stock status at the end of the time series (@fig-sens_lengths2_spout through @fig-sens_lengths2_status). 
+Sensitivity analyses to dataset choices to examine the impact of including different data streams were conducted by selectively removing each data source using emphasis factors, as well as by including different weighting schemes for composition data. Summaries of model results for these sensitivities are presented in @tbl-sensitivities-like-indices to @tbl-sensitivities-like-comps-age2. Among these, the base model appears to be most sensitive to removing all length compositions, which show a significantly different biomass trajectory and a more optimistic estimate of stock status at the end of the time series (@fig-sens_lengths1_spout through @fig-sens_lengths2_status). 
 
-Removing all age compositions, \gls{iphc} age compositions only or applying the McAllister & Ianelli weighting scheme also result in slightly more optimistic estimates of stock status at the end of the time series compared to the base model (@fig-sens_age_spout and @fig-sens_age_status). Furthermore, models with all abundance and \gls{iphc} indices removed resulted in slightly less optimistic estimates of spawning output and stock status at the end of the time series (@fig-sens_indices_spout and @fig-sens_indices_status). Models removing the remaining indices consecutively did not show large differences in the final stock status estimate. A summary of the relative changes in management quantities from all sensitivity models is shown in @fig-sens_sum, and without the removal of all length composition data in @fig-sens_sum_no_lengths.
+Removing all age compositions, \gls{iphc} age compositions only or applying the McAllister & Ianelli weighting scheme also result in slightly more optimistic estimates of stock status at the end of the time series compared to the base model (@fig-sens_age1_spout to @fig-sens_age2_status). Furthermore, models with all abundance and \gls{iphc} indices removed resulted in slightly less optimistic estimates of spawning output and stock status at the end of the time series (@fig-sens_indices_spout and @fig-sens_indices_status). Models removing the remaining indices consecutively did not show large differences in the final stock status estimate. A summary of the relative changes in management quantities from all sensitivity models is shown in @fig-sens_sum, and without the removal of all length composition data in @fig-sens_sum_no_lengths.
  
 ### Retrospective Analysis
 
-A retrospective analysis was conducted by running the base model with data removed for the past 5 years. Comparisons of the time series of absolute and relative spawning output
-and recruitment deviations time series for the runs are shown in @fig-retro-sp-output, @fig-retro-rel-biomass, and @fig-retro-recruit-dev, respectively. Recent recruitment deviations, which were negative in the base model, regressed towards the spawner-recruit curve, indicating closer to average recruitments in those years, with higher uncertainty, as data were removed. However, the change is not large, indicating that the new data are consistent with previous values or the sample sizes are too small to have any impact.
+A retrospective analysis was conducted by running the base model with data removed for the past 5 years. Comparisons of the time series of absolute and relative spawning output and recruitment deviations time series for the runs are shown in @fig-retro-sp-output, @fig-retro-rel-biomass, and @fig-retro-recruit-dev, respectively. Recent recruitment deviations, which were negative in the base model, regressed towards the spawner-recruit curve, indicating closer to average recruitments in those years, with higher uncertainty, as data were removed. However, the change is not large, indicating that the new data are consistent with previous values or the sample sizes are too small to have any impact.
  
 General trends in relative depletion (or spawning output) have been relatively stable across assessments (@fig-status_assmnts), with a decline throughout the later half of the 1900’s as the stock was fished down, followed by a reversal in the overall status after substantial catch restrictions were implemented in 2002. Across the most recent assessments, the 2017 assessment [@gertseva_stock_2017] appears to have the most pessimistic depletion across the stock decline in the 1900s but otherwise, the relative depletion trend appears to be similar across the 2011, 2017 and the 2025 assessment as the stock has rebounded from its lowest status. 
 
@@ -31,15 +30,15 @@ General trends in relative depletion (or spawning output) have been relatively s
 
 Likelihood profiles were conducted for natural mortality ($M$), stock-recruit steepness ($h$), and equilibrium recruitment (ln$R$~0~). These likelihood profiles were conducted by fixing the parameter of interest at specific values and estimating the remaining parameters based on the fixed parameter value.
 
-In the assessment, $M$ was fixed at the value of 0.044, based on Hamel’s prior. The profile analysis over $M$ showed that the negative log-likelihood was minimized with a value around 0.052 (@fig-natm-piner), which is close to what was assumed in the assessment. The time series of absolute and relative spawning output associated with different values of $M$ ranging from 0.03 to 0.06 are shown in @fig-natm-bratio.
+In the assessment, $M$ was fixed at the value of 0.044, based on Hamel’s prior. The profile analysis over $M$ showed that the negative log-likelihood was minimized with a value around 0.050 (@fig-natm-piner), which is close to what was assumed in the assessment. The time series of absolute and relative spawning output associated with different values of $M$ ranging from 0.03 to 0.06 are shown in @fig-natm-bratio.
 
-In the base model, $h$ is fixed at the mean of the meta-analytic steepness prior, 0.718, which is the same as in the 2017 assessment; much higher values (e.g. 0.9) are considered implausible given the life-history of slow growing rockfish. The likelihood profile for $h$ shows that the negative log-likelihood for the base model declines with increasing $h$ to a value around 0.7, notably different from the sensitivity analysis (@fig-steep-piner). Time series of relative unfished biomass associated with different values of $h$ ranging from 0.25 to 1.0 are shown in @fig-steep-bratio.
+In the base model, $h$ is fixed at the mean of the meta-analytic steepness prior, 0.72; much higher values (e.g. 0.9) are considered implausible given the life-history of slow growing rockfish. The likelihood profile for $h$ shows that the negative log-likelihood for the base model declines with increasing $h$ to a value around 0.8, notably different from the sensitivity analysis (@fig-steep-piner). Time series of relative unfished biomass associated with different values of $h$ ranging from 0.25 to 1.0 are shown in @fig-steep-bratio.
 
-A likelihood profile analysis for ln($R$~0~) shows a strongly informed initial recruitment value in the base model (@fig-rzero-piner). Most of the information for this parameter is coming from the length data. Within the length composition likelihood component, all sources of length compositions are equally informative. The index and age data are relatively uninformative. Changes in ln($R$~0~) results in relatively small changes in the scale of the population (@fig-rzero-sp-output and @fig-rzero-parm) compared to the 2017 assessment model. 
+A likelihood profile analysis for ln($R$~0~) shows a strongly informed initial recruitment value in the base model (@fig-rzero-piner). Most of the information for this parameter is coming from the recruitment estimates. Within the length composition likelihood component, all sources of length compositions are equally informative. The index and age data are relatively uninformative. Changes in ln($R$~0~) results in relatively small changes in the scale of the population (@fig-rzero-sp-output and @fig-rzero-parm) compared to the 2017 assessment model. 
 
 ## Unresolved Problems and Major Uncertainties
 
-Main life history parameters, such as natural mortality and stock-recruit curve steepness, generally contribute significant uncertainty to stock assessments. These values were fixed in this assessment, as they were in the benchmark assessment because the benchmark model was unable to reliably estimate these quantities [@gertseva_stock_2017]. These quantities are essential for understanding the dynamics of the stock and determining projected rebuilding. Alternative values of these parameters were explored through both sensitivity and likelihood profile analyses. Maturity parameters were fixed in this assessment, as they were in benchmark assessment [@gertseva_stock_2017]. Maturity schedules are generally estimated outside of the assessment, and the maturity estimates were not updated since the benchmark assessment. These parameters, once updated, may influence estimates of spawning stock output.
+Main life history parameters, such as natural mortality and stock-recruit curve steepness, generally contribute significant uncertainty to stock assessments. These values were fixed in this assessment, as they were in the benchmark assessment because the benchmark model was unable to reliably estimate these quantities [@gertseva_stock_2017]. These quantities are essential for understanding the dynamics of the stock and determining projected rebuilding. Alternative values of these parameters were explored through both sensitivity and likelihood profile analyses. Maturity parameters were fixed in this assessment, as they were in benchmark assessment [@gertseva_stock_2017]. Maturity schedules are generally estimated outside of the assessment, and the maturity parameter estimates were not updated in the time since the benchmark assessment. These parameters, once updated, may influence estimates of spawning stock output.
 
 Although significant progress has been made in reconstructing historical landings, early catches of Yelloweye Rockfish continue to be uncertain.
 
